# codepy

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
codepy/: __init__.py  bpl.py  cuda.py  elementwise.py  jit.py  libraries.py  toolchain.py  tools.py
codepy/cgen/: __init__.py
doc/: conf.py  index.rst  jit.rst  upload-docs.sh
doc/source/: conf.py  index.rst  jit.rst
examples/: demo.py  demo_plain.py  nvcc-test.py
test/: demo.py  demo_plain.py  nvcc-test.py  test_identical_symbols.py  test_two_stage_compile.py
