[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codepy"
version = "2024.1"
description = "Generate and execute native code at run time"
readme = "README.rst"
license = { text = "MIT" }
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=1.6",
    "pytools>=2022.1.14",
    "platformdirs>=2.2.0",
    "cgen>=2020.1"
]

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
]

[project.urls]
Documentation = "https://documen.tician.de/codepy"
Homepage = "https://github.com/inducer/codepy"

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "N",   # pep8-naming
    "Q",   # flake8-quotes
    "RUF", # ruff
    "UP",  # pyupgrade
    "W",   # pycodestyle
]
extend-ignore = [
    "C90",   # McCabe complexity
    "E226",  # missing whitespace around arithmetic operator
    "E241",  # multiple spaces after comma
    "E242",  # tab after comma
    "E402",  # module level import not at the top of file
    "UP031", # use f-strings instead of %
    "UP032", # use f-strings instead of .format
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [ "cgen", "pytools" ]
known-local-folder = [ "codepy" ]
lines-after-imports = 2

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "cgen.*",
]
ignore_missing_imports = true
