[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codepy"
version = "2025.1"
description = "Generate and execute native code at run time"
readme = "README.rst"
license = "MIT"
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "cgen>=2020.1",
    "numpy>=1.6",
    "platformdirs>=2.2.0",
    "pytools>=2022.1.14",
    # NOTE: for Self (requires python >=3.11)
    "typing-extensions>=4.5",
]

[project.optional-dependencies]
test = [
    "pytest",
    "ruff",
]

[project.urls]
Documentation = "https://documen.tician.de/codepy"
Homepage = "https://github.com/inducer/codepy"

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "Q",   # flake8-quotes
    "RUF", # ruff
    "TC",  # flake8-type-checking
    "UP",  # pyupgrade
    "W",   # pycodestyle
]
extend-ignore = [
    "C90",   # McCabe complexity
    "E226",  # missing whitespace around arithmetic operator
    "E241",  # multiple spaces after comma
    "E242",  # tab after comma
    "E402",  # module level import not at the top of file
    "UP031", # use f-strings instead of %
    "UP032", # use f-strings instead of .format
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = [ "cgen", "pytools" ]
known-local-folder = [ "codepy" ]
lines-after-imports = 2

[tool.basedpyright]
pythonVersion = "3.10"
pythonPlatform = "All"

reportImplicitStringConcatenation = "none"
reportExplicitAny = "none"
reportAny = "none"

ignore = [
    "examples/nvcc-test.py",
    "codepy/elementwise.py",
]
